# grapegram

./: LICENSE  README.md  docker-compose-ci.yaml  docker-compose-local.yaml  pyproject.toml
grapegram_client/: api.py  config.py  main.py  pyproject.toml
grapegram_client/services/: containers.py  models.py
grapegram_client/web/css/: sign_in.css  style.css
grapegram_client/web/templates/: home.html  sign_in.html  sign_up.html
grapegram_server/: Dockerfile  Makefile  alembic.ini  docker-compose-alembic.yaml  docker-compose-deploy.yaml  docker-compose-local.yaml  hashing.py  main.py  pyproject.toml  requirements.txt  settings.py
grapegram_server/api/: chat_handlers.py  control_handlers.py  login_handlers.py  schemas.py  user_handlers.py
grapegram_server/api/actions/: auth.py  user.py
grapegram_server/db/: dals.py  models.py  session.py
grapegram_server/migrations/versions/: 703670ce36ed_update.py  ae10752be460_update.py  f8a5a0092545_update.py
grapegram_server/services/: websocket_manager.py
src/: config.py
src/db/: dals.py  models.py
